Fixed table css on smaller screens

--- a/style.css
+++ b/style.css
@@ -2685,7 +2685,7 @@ div#leftNav {
     padding: 5px 15px;
     background-color: #fff;
     border: 1px solid #ddd;
-    width:47%;
+    width:45.5%;
 }
 h2 #addNote, h2 #addHostNote {
     text-decoration: none;
@@ -2733,5 +2733,8 @@ h2.cbheader {
 }
 .domainAccordion #host_basic {
 	display: none;
+}
+.vSection:nth-child(even) {
+	float: right;
 }
 /*...END AWESOMENESS...*/
